--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <div><a href="https://dc.brezelservices.eu" id="play"><span id="playtext">PLAY</span></a></div>
 <div><img id="lester" src="img/lester.png"></img></div>
 <div><img id="lester_mobile" src="img/lester_mobile.png"></img></div>
-
+<div id="copyright">Copyright © by Brezel Services | Yoshi</div>
 </body>
 </html>
